--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -46,7 +46,7 @@ body {
 .play-item {
   position: relative;
   padding: 5px;
-  padding-left: 20px;
+  padding-left: 30px;
   list-style: none;
   opacity: .8;
   cursor: pointer;
@@ -58,7 +58,12 @@ body {
 }
 
 .play-item::before {
-  content: "\2713";  
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-image: url("../assets/svg/play.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
   position: absolute;
   left: 0;
   top: 2px;
@@ -66,6 +71,11 @@ body {
 }
 
 .item-active::before {
+  background-image: url("../assets/svg/pause.svg");
+  color: #C5B358;
+}
+
+.item-active-play {
   color: #C5B358;
 }
 
