--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -128,6 +128,13 @@ body {
   background-image: url("../assets/svg/play-next.svg");
 }
 
+.play-list li {
+  /* width: max-content; */
+  box-sizing: content-box;
+  border-bottom: #fff 1px solid;
+  margin-bottom: 10px;
+}
+
 .weather {
   display: flex;
   flex-direction: column;
