--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -26,9 +26,17 @@ body {
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
-  height: 30vh;
+  height: 35vh;
   min-height: 220px;  
   padding: 20px;
+}
+
+.player {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
 
 .player-controls {
@@ -36,7 +44,6 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 120px;
-  margin-bottom: 28px;
 }
 
 .play-list {
@@ -129,10 +136,90 @@ body {
 }
 
 .play-list li {
-  /* width: max-content; */
   box-sizing: content-box;
   border-bottom: #fff 1px solid;
   margin-bottom: 10px;
+}
+
+.player-button {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  margin-bottom: 10px;
+}
+
+.player-volume {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 15px;
+  gap: 10px;
+}
+
+.button-volume {
+  width: 20px;
+  height: 20px;
+  background-image: url("../assets/svg/volume.svg");
+  background-size: 20px 20px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+  opacity: .8;
+  cursor: pointer;
+  transition: .3s; 
+}
+
+.button-volume-off {
+  background-image: url("../assets/svg/volume-xmark.svg");
+}
+
+.sound-volume {
+  width: 70px;
+  height: 5px;
+  appearance: none;
+}
+
+.sound-track {
+  width: 100%;
+}
+
+.progress {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+}
+
+.timeline {
+  background: white;
+  width: 60%;
+  height: 10px;
+  position: relative;
+  cursor: pointer;
+  box-shadow: 0 2px 10px 0 #0008;
+}
+
+.duration-sound {
+  background: rgb(15, 64, 228);
+  width: 0%;
+  height: 100%;
+  transition: 0.25s;
+}
+
+.duration {
+  width: 50%;
+  height: 100%;
+}
+
+.player-time {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  width: 50%;
 }
 
 .weather {
