--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -366,7 +366,7 @@ body {
   min-height: 160px;  
   padding: 20px;
   gap: 5%;
-  margin-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .settings {
@@ -374,10 +374,11 @@ body {
   height: 50px;
   background-image: url("../assets/svg/gear.svg");
   background-size: 40px 40px;
-  background-position: center center;
+  background-position: left center;
   background-repeat: no-repeat;
   background-color: transparent;
   margin-bottom: 20px;
+  margin-left: 2%;
   cursor: pointer;
 }
 
@@ -676,7 +677,6 @@ body {
   border-radius: 20px;
   border: #C5B358 1px solid;
   transition: all linear 0.5s;
-  overflow: hidden;
   opacity: 0;
   visibility: hidden;
 }
@@ -692,9 +692,10 @@ body {
   height: 60px;
   background-image: url("../assets/svg/task-list.svg");
   background-size: 50px 60px;
-  background-position: center center;
+  background-position: right center;
   background-repeat: no-repeat;
   background-color: transparent;
+  margin-right: 2%;
   margin-bottom: 20px;
   cursor: pointer;
 }
@@ -735,12 +736,23 @@ body {
   font-size: 18px;
 }
 
-.todo-wrapper {
+.todo-wrapper-input {
   width: 100%;
   display: flex; 
   justify-content: center; 
   align-items: center;
-  gap: 5%;
+  gap: 10px;
+}
+
+.todo-wrapper {
+  width: 100%;
+  max-height: 55vh;
+  overflow-y: auto;
+  display: flex; 
+  flex-direction: column;
+  justify-content: start; 
+  align-items: center;
+  gap: 10px;
 }
 
 .task-discription {
@@ -790,7 +802,6 @@ body {
   align-items: center;
   gap: 10px;
   width: 100%;
-  padding-bottom: 10px;
   user-select: none;
 }
 
@@ -876,6 +887,7 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-color: transparent;
+  margin-right: 5px;
   cursor: pointer;
 }
 
