--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -797,29 +797,35 @@ body {
 }
 
 .todo-item {
+  position: relative;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 10px;
   width: 100%;
   user-select: none;
-}
-
-.task-wrapper {
-  position: relative;
-  display: flex;
-  width: 93%;
   color: #535353;
-  align-items: center;
   background-color: #fff;
   padding: 7px 7px 7px 10px;
   box-sizing: border-box;
-  gap: 10px;
   transition: all ease 0.4s;
   border-radius: 5px;
 }
 
-.task-done {
+.todo-item.delition {
+  animation: opacity 1s ease-in-out;
+}
+
+@keyframes opacity {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.checked {
   background-color: rgb(138, 133, 133);
 }
 
@@ -828,15 +834,15 @@ body {
   display: inline-flex;
   align-items: center;
   user-select: none;
-  cursor: pointer;
+  width: 80%;
 }
 
 .btn-complete-task {
   width: 25px;
   height: 25px;
   margin-left: 5px;
+  cursor: pointer;
   position: absolute;
-  z-index: -1;
   opacity: 0;
 }
 
