--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -511,7 +511,6 @@ body {
 .way-container {
   display: flex;
   justify-content: space-between;
-
 }
 
 .way-column {
@@ -568,7 +567,6 @@ body {
 
 .tag-label {
   width: 91px;
-  
 }
 
 .tag-input {
@@ -655,17 +653,25 @@ body {
   left: 50%;
   width: 30px;
   height: 30px;
-   transform: translate(-50%, -50%);
-   display: flex;
-   justify-content: center;
-   align-items: center;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   visibility: visible;
+}
+
+.todo-wrapper-all {
+  position: relative;
+  width: 10%;
+  height: 60px;
+  margin-right: 2%;
+  margin-bottom: 20px;
 }
 
 .todolist-container {
   position: absolute;
-  right: 20px;
-  bottom: 20px;
+  right: -35px;
+  bottom: -25px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -683,20 +689,17 @@ body {
 
 .todolist-show {
   opacity: 1;
-  right: 20px;
   visibility: inherit;
 }
 
 .todolist-icon {
-  width: 10%;
+  width: 100%;
   height: 60px;
   background-image: url("../assets/svg/task-list.svg");
   background-size: 50px 60px;
   background-position: right center;
   background-repeat: no-repeat;
   background-color: transparent;
-  margin-right: 2%;
-  margin-bottom: 20px;
   cursor: pointer;
 }
 
@@ -827,6 +830,7 @@ body {
 
 .checked {
   background-color: rgb(138, 133, 133);
+  text-decoration: line-through;
 }
 
 .text-task {
@@ -926,10 +930,4 @@ body {
     font-size: 32px;
     padding: 5px;
   }
-}
-
-@media (max-width: 600px) {
-  .todolist-container {
-    width: 80%;
-  } 
 }
