--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -27,7 +27,7 @@ body {
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
-  height: 35vh;
+  height: 45vh;
   min-height: 220px;  
   padding: 20px;
 }
@@ -37,8 +37,9 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 15px;
+  gap: 10px;
   transition: opacity ease 1s;
+  z-index: 5;
 }
 
 .player-controls {
@@ -283,7 +284,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 40vh;
+  height: 30vh;
   min-height: 260px;  
   padding: 20px;
 }
@@ -328,7 +329,7 @@ body {
   justify-content: stretch;
   align-items: center;
   min-height: 48px;
-  width: 100vw;
+  width: 100%;
   font-size: 40px;
   transition: opacity ease 1s;
 }
@@ -573,6 +574,7 @@ body {
   width: 37%;
   height: 30px;
   padding-left: 5px;
+  border-radius: 5px;
 }
 
 .tag-change {
